# task0

./: .clangd  .gitignore  CMakeLists.txt  README.md  format.json  go.mod  introspection.xml  main.go  package.json
cmd/client/: main.go
cmd/server/: debug_action_service.go  main.go
include/common/: MouseData.h
include/hardware/: MouseProcessor.h
include/processing/: MouseService.h
internal/action/: mapping.go
internal/dbus/: service.go
internal/hardware/: input.go  mouse.go
internal/processing/: gestures.go
pkg/dbus/: service.go
src/: main.cpp  mouse-processor.cpp
src/hardware/: MouseProcessor.cpp
src/processing/: MouseService.cpp
